syntax = "proto3";

package service1;

option go_package = "service-1/proto";

service Service1 {
    rpc Hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}
